--- a/localStorage-forja-manha/Login/style.css
+++ b/localStorage-forja-manha/Login/style.css
@@ -6,8 +6,151 @@
 
 body{
     font-family:"inter", sans-serif;
+    background-image: url(./images/star.jpg);
+    background-repeat: no-repeat;
+    background-size: cover;
+    background-position: center;
+    background-attachment: fixed;
+    min-height: 100vh;
+    display: flex;
+    align-items:center;
+    justify-content: center;
+    height: auto;
+
+}
+.container{
+    position: relative;
+    background-color: rgb(225, 165, 242);
+    width: 300px;
+    height: 350px;
+    border: 2px solid #ffecd1;
+    display:flex;
+    flex-direction: column;
+    align-items: center;
+    justify-content: center;
+    gap: 2vh;
+    padding: 10px ;
+    box-shadow: rgba(0, 0, 0, 0.35) 0px 5px 15px;
 }
 .logo{
-    width: 200px;
-    height: 200px;
+    border-radius: 100%;
+    width: 100px;
+    height: 100px;
+}
+
+.round{
+    border-radius: 100%;
+    width:110px;
+    height: 110px;
+    border: 2px  solid #ffecd1;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    position: absolute;
+    top: -1%;
+    left: 50%;
+    transform: translate(-50%, -50%);
+    box-shadow: rgba(255, 255, 255, 0.35) 0px 5px 15px;
+}
+
+
+
+.wrap-input-label{
+    display: flex;
+    flex-direction: column;
+    align-items: left;
+    width: 80%;
+    position: relative;
+
+}
+
+.eye{
+    position:absolute;
+    right:10px;
+    bottom: 7px;
+    opacity: 0.7;
+}
+
+.eye:hover{
+    cursor:pointer;
+    opacity: 1;
+}
+
+.wrap-input-label label{
+    color:#ffecd1;
+    font-size: 20px;
+    margin-bottom: 5px;
+}
+
+.wrap-input-label input{
+    background-color: transparente;
+    padding: 8px 0px;
+    border: none;
+    width: 100%;
+    border-bottom: 2px solid #ffecd1;
+    font-size: 18px;
+    color: #ffecd1;
+}
+
+input::placeholder{
+    color: #001524;
+    font-size: 16px;
+}
+
+input:focus{
+    border: none;
+    outline: none;
+    color: #260130;
+    font-size: 16px;
+    border-bottom: 2px solid #260130;
+}
+
+.btn-login{
+    padding: 10px;
+    width: 80%;
+    background-color:#260130 ;
+    border-radius: 999px;
+    border: none;
+    border: 2px solid #ff8eec;
+    font-size: 20px;
+    font-weight: bold;
+    color: #ff8eec;
+    transition: all 200ms ease-in-out;
+}
+
+.btn-login:hover{
+    cursor: pointer;
+    color:#ffecd1;
+    border: 2px solid #ffecd1;
+    box-shadow: rgba(255, 248, 248, 0.35) 0px 5px 15px;
+}
+
+
+.error-div{
+    display: none;
+    flex-direction: row;
+    justify-content: center;
+    align-items: center;
+    width: auto;
+    height: auto;
+    background-color: lightpink;
+    gap: 2vh;
+    padding: 10px;
+    position: absolute;
+    bottom: 5%;
+    font-size: 14px;
+    font-weight: lighter;
+    box-shadow: rgba(0, 0, 0, 0.8) 0px 5px 15px;
+}
+
+.error-div button{
+    background-color: transparente;
+    border: none;
+    opacity:0.7;
+    transition: all 200ms linear;
+}
+
+.error-div button:hover{
+    cursor:pointer;
+    opacity: 1;
 }
