--- a/localStorage-forja-manha/Login/style.css
+++ b/localStorage-forja-manha/Login/style.css
@@ -23,7 +23,7 @@ body{
     background-color: rgb(225, 165, 242);
     width: 300px;
     height: 350px;
-    border: 2px solid #ffecd1;
+    border: 2px solid black;
     display:flex;
     flex-direction: column;
     align-items: center;
@@ -42,7 +42,7 @@ body{
     border-radius: 100%;
     width:110px;
     height: 110px;
-    border: 2px  solid #ffecd1;
+    border: 2px  solid black;
     display: flex;
     align-items: center;
     justify-content: center;
@@ -87,9 +87,9 @@ body{
     padding: 8px 0px;
     border: none;
     width: 100%;
-    border-bottom: 2px solid #ffecd1;
+    border-bottom: 2px solid black;
     font-size: 18px;
-    color: #ffecd1;
+    color: black;
 }
 
 input::placeholder{
@@ -121,7 +121,7 @@ input:focus{
 .btn-login:hover{
     cursor: pointer;
     color:#ffecd1;
-    border: 2px solid #ffecd1;
+    border: 2px solid white;
     box-shadow: rgba(255, 248, 248, 0.35) 0px 5px 15px;
 }
 
