--- a/localStorage-forja-manha/loja/style.css
+++ b/localStorage-forja-manha/loja/style.css
@@ -5,5 +5,25 @@
 }
 
 body{
-    font-family:"inter", sans-serif;
+    font-family:"inter", sans-serif !important;
+    width: 100vw;
+    height: auto;
+    overflow-x: hidden;
+    padding: 20px;
+}
+
+.wrap{
+    display: flex;
+    flex-wrap: wrap;
+    justify-content: center;
+    align-items: center;
+    width: 100%;
+    height: auto;
+    padding: 5%;
+
+}
+
+.center{
+    gap:30px;
+    justify-content: center;
 }
